@@ -1,5 +1,9 @@
 2007-09-28  Michael Hutchinson <mhutchinson@novell.com> 
 
+	* Project/AspNetAppProject.cs: Check for xsp before running it.
+
+2007-09-28  Michael Hutchinson <mhutchinson@novell.com> 
+
 	* Deployment/WebTargetEditor.cs, Deployment/WebDeployService.cs,
 	  Deployment/WebDeployCommands.cs, Deployment/WebDeployResolver.cs,
 	  Deployment/WebDeployTargetCollection.cs, Deployment/WebDeployTarget.cs,
